# onchainos-plugins

1inch/: Cargo.toml  README.md  design.md  plugin.yaml
1inch/skills/1inch/: SKILL.md
1inch/src/: api.rs  config.rs  main.rs  onchainos.rs
1inch/tests/: routing_test.md  selector_verification.md  test_cases.md  test_results.md
aave-v3/: Cargo.toml  README.md  SKILL.md  SKILL_SUMMARY.md  design.md  plugin.yaml
aave-v3/.claude-plugin/: plugin.json
aave-v3/skills/aave-v3/: SKILL.md
aave-v3/src/: config.rs  main.rs  onchainos.rs  rpc.rs
aave-v3/src/commands/: borrow.rs  claim_rewards.rs  health_factor.rs  mod.rs  positions.rs  repay.rs  set_collateral.rs  set_emode.rs  supply.rs  withdraw.rs
aave-v3/tests/: test_cases.md  test_results.md
camelot-v3/: Cargo.toml  README.md  design.md  plugin.yaml
camelot-v3/skills/camelot-v3/: SKILL.md
camelot-v3/src/: config.rs  main.rs  onchainos.rs  rpc.rs
camelot-v3/src/commands/: add_liquidity.rs  mod.rs  positions.rs  quote.rs  remove_liquidity.rs  swap.rs
camelot-v3/tests/: selector_verification.md  test_cases.md  test_results.md
cian/: Cargo.toml  LICENSE  plugin.yaml
cian/.claude-plugin/: plugin.json
cian/skills/cian/: SKILL.md
cian/src/: abi.rs  api.rs  config.rs  main.rs  onchainos.rs  rpc.rs
cian/src/commands/: deposit.rs  get_positions.rs  list_vaults.rs  mod.rs  request_withdraw.rs
cian/tests/: test_results.md
compound-v3/: Cargo.toml  design.md  plugin.yaml
compound-v3/.claude-plugin/: plugin.json
compound-v3/skills/compound-v3/: SKILL.md
compound-v3/src/: config.rs  main.rs  onchainos.rs  rpc.rs
compound-v3/src/commands/: borrow.rs  claim_rewards.rs  get_markets.rs  get_position.rs  mod.rs  repay.rs  supply.rs  withdraw.rs
compound-v3/tests/: test_cases.md  test_results.md
debridge/: Cargo.toml  README.md  SKILL.md  design.md  plugin.yaml
debridge/.claude-plugin/: plugin.json
debridge/skills/debridge/: SKILL.md
debridge/src/: api.rs  config.rs  main.rs  onchainos.rs
debridge/src/commands/: bridge.rs  get_chains.rs  get_quote.rs  get_status.rs  mod.rs
debridge/tests/: test_cases.md  test_results.md
dinero-pxeth/: Cargo.toml  README.md  design.md  plugin.yaml
dinero-pxeth/skills/dinero-pxeth/: SKILL.md
dinero-pxeth/src/: config.rs  main.rs  onchainos.rs
dinero-pxeth/src/commands/: deposit.rs  mod.rs  positions.rs  rates.rs  redeem.rs  stake.rs
dinero-pxeth/tests/: selector_verification.md  test_cases.md  test_results.md
drift-protocol/: Cargo.toml  README.md  design.md  plugin.yaml
drift-protocol/skills/drift-protocol/: SKILL.md
drift-protocol/src/: api.rs  main.rs  onchainos.rs
drift-protocol/tests/: routing_test.md  selector_verification.md  test_cases.md  test_results.md
dydx-v4/: Cargo.toml  README.md  design.md  plugin.yaml
dydx-v4/skills/dydx-v4/: SKILL.md
dydx-v4/src/: api.rs  calldata.rs  main.rs  onchainos.rs
dydx-v4/tests/: routing_test.md  selector_verification.md  test_cases.md  test_results.md
gearbox-v3/: Cargo.toml  SKILL.md  design.md  plugin.yaml
gearbox-v3/.claude-plugin/: plugin.json
gearbox-v3/skills/gearbox-v3/: SKILL.md
gearbox-v3/src/: abi.rs  config.rs  main.rs  onchainos.rs  rpc.rs
gearbox-v3/src/commands/: add_collateral.rs  close_account.rs  get_account.rs  get_pools.rs  mod.rs  open_account.rs  withdraw.rs
gearbox-v3/tests/: test_cases.md  test_results.md
jupiter/: Cargo.toml  README.md  design.md  plugin.yaml
jupiter/skills/jupiter/: SKILL.md
jupiter/src/: api.rs  config.rs  main.rs  onchainos.rs
jupiter/src/commands/: get_price.rs  get_quote.rs  get_tokens.rs  mod.rs  swap.rs
jupiter/tests/: routing_test.md  selector_verification.md  test_cases.md  test_results.md
mayan/: Cargo.toml  LICENSE  README.md  design.md  plugin.yaml
mayan/.claude-plugin/: plugin.json
mayan/skills/mayan/: SKILL.md
mayan/src/: api.rs  config.rs  main.rs  onchainos.rs
mayan/src/commands/: get_quote.rs  get_status.rs  mod.rs  swap.rs
mayan/tests/: test_cases.md  test_results.md
morpho/: Cargo.toml  README.md  SKILL.md  design.md  plugin.yaml  prd-stub.md  research-notes.md
morpho/.claude-plugin/: plugin.json
morpho/skills/morpho/: SKILL.md
morpho/src/: api.rs  calldata.rs  config.rs  main.rs  onchainos.rs  rpc.rs
morpho/src/commands/: borrow.rs  claim_rewards.rs  (+8 more)
morpho/tests/: test_results.md
pancakeswap/: Cargo.toml  design.md  plugin.yaml  prd-stub.md  research-notes.md
pancakeswap/.claude-plugin/: plugin.json
pancakeswap/src/: calldata.rs  config.rs  main.rs  onchainos.rs  rpc.rs
pancakeswap/tests/: test_cases.md  test_results.md
pump-fun/: Cargo.toml  SKILL.md  design.md  plugin.yaml
pump-fun/src/: config.rs  main.rs  onchainos.rs
pump-fun/tests/: test_cases.md  test_results.md
rocket-pool/: Cargo.toml  README.md  design.md  plugin.yaml
rocket-pool/src/: config.rs  contracts.rs  main.rs  onchainos.rs  rpc.rs
rocket-pool/tests/: selector_verification.md  test_results.md
sanctum-validator-lst/: Cargo.toml  design.md  plugin.yaml
sanctum-validator-lst/.claude-plugin/: plugin.json
sanctum-validator-lst/src/: api.rs  config.rs  instructions.rs  main.rs  onchainos.rs  rpc.rs
sanctum-validator-lst/tests/: test_cases.md  test_results.md
stader/: Cargo.toml  LICENSE  README.md  design.md  plugin.yaml
stader/src/: config.rs  main.rs  onchainos.rs  rpc.rs
stader/tests/: selector_verification.md  test_cases.md  test_results.md
term-structure/: Cargo.toml  SKILL.md  design.md  plugin.yaml
term-structure/.claude-plugin/: plugin.json
term-structure/src/: config.rs  main.rs  onchainos.rs  rpc.rs
term-structure/tests/: test_cases.md  test_results.md
umami-finance/: Cargo.toml  README.md  design.md  plugin.yaml
umami-finance/src/: config.rs  main.rs  onchainos.rs  rpc.rs
umami-finance/tests/: selector_verification.md  test_cases.md  test_results.md
uniswap-v3/: Cargo.toml  README.md  design.md  plugin.yaml
uniswap-v3/src/: calldata.rs  config.rs  main.rs  onchainos.rs  rpc.rs
uniswap-v3/tests/: routing_test.md  selector_verification.md  test_cases.md  test_results.md
(+623 files in other folders)
