[package]
name = "aave-v3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aave-v3"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
alloy-primitives = "0.8"
alloy-sol-types = "0.8"
hex = "0.4"
anyhow = "1"
