[package]
name = "compound-v3"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "compound-v3"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
