[package]
name = "jupiter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jupiter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
bs58 = "0.5"
