[package]
name = "mayan"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mayan"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
