[package]
name = "pump-fun"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pump-fun"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
bs58 = "0.5"
pumpfun = "4.6.0"
solana-client = "2.1"
solana-sdk = "2.1"
bincode = "1"
