[package]
name = "pump-fun"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pump-fun"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
pumpfun = "4.6.0"
solana-sdk = "2.1"
openssl = { version = "0.10", features = ["vendored"] }
