[package]
name = "sanctum-validator-lst"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sanctum-validator-lst"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
bs58 = "0.5"
sha2 = "0.10"
curve25519-dalek = { version = "4", default-features = false, features = ["alloc"] }
