[package]
name = "stader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "stader"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
hex = "0.4"
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
